--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <h1>Hangman</h1><br/>
-    <input class ="txt" id="guessWord" type="text" placeholder="Enter the word or phrase" width=200>
+    <input class ="txt" id="mysteryWord" type="text" placeholder="Enter the word or phrase" width=200>
     <input class="button" id="submitWord" type="button" value="Submit"> 
-    <!-- <h3 class="h3" id="h3">OR</h3>
+     <!-- <h3 class="h3" id="h3">OR</h3>
     <input class="button" id="randomWord" type="button" value="Pick a Random Word"><br/> -->
+    <input class="hide-me" id="guessBox" type="text" placeholder="Guess a letter!">
+    <input class="hide-me" id="guessBtn" type="button" value="Guess!"></br>
+
+    <div class="gameArea" id="gameArea">
+
+    </div>
+   
 
 
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
