--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Hangman</h1><br/>
     <input class ="txt" id="mysteryWord" type="text" placeholder="Enter the word or phrase" width=200>
     <input class="button" id="submitWord" type="button" value="Submit"> 
-     <!-- <h3 class="h3" id="h3">OR</h3>
-    <input class="button" id="randomWord" type="button" value="Pick a Random Word"><br/> -->
+     <h3 class="h3" id="h3">OR</h3>
+    <input class="button" id="randomWord" type="button" value="Pick a Random Word"><br/>
     <input class="hide-me" id="guessBox" type="text" placeholder="Guess a letter!">
     <input class="hide-me" id="guessBtn" type="button" value="Guess!"></br>
 
