--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hangman</h1><br/>
-    <input class ="txt" id="mysteryWord" type="text" placeholder="Enter the word or phrase" width=200>
+    <input class ="txt" id="mysteryWord" type="text" placeholder="Pick your word!" width=200>
     <input class="button" id="submitWord" type="button" value="Submit"> 
      <h3 class="h3" id="h3">OR</h3>
     <input class="button" id="randomWord" type="button" value="Pick a Random Word"><br/>
@@ -20,7 +20,7 @@
     </div>
    
 
-
+    <script src="node_modules/rword/words/big.json"></script>
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/game.js"></script>
 </body>
