added win/lose messages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <div class="gameArea" id="gameArea">
 
     </div>
+
+    <div class="gameMessage" id="gameMessage">
+        <h2 id="winmsg">YOU WIN!</h2></br>
+        <h2 id="losemsg">Sorry, you lose!</h2>
+    </div>
+    <div class="reset" id="reset">
+        <input class="hide-me" id="resetBtn" type="button" value="Reset Game">
+    </div>
    
 
     <script src="node_modules/rword/words/big.json"></script>
