tested win, lose, reset

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <h2 id="losemsg">Sorry, you lose!</h2>
     </div>
     <div class="reset" id="reset">
-        <input class="hide-me" id="resetBtn" type="button" value="Reset Game">
+        <input class="hide-me" id="resetBtn" type="button" value="Play Again?">
     </div>
+
+
    
 
     <script src="node_modules/rword/words/big.json"></script>
