--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Hangman</h1><br/>
@@ -25,10 +25,7 @@
     </div>
     <div class="reset" id="reset">
         <input class="hide-me" id="resetBtn" type="button" value="Play Again?">
-    </div>
-
-
-   
+    </div>   
 
     <script src="node_modules/rword/words/big.json"></script>
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
