--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
+    <center>
     <h1>Hangman</h1><br/>
     <input class ="txt" id="mysteryWord" type="text" placeholder="Pick your word!" width=200>
     <input class="button" id="submitWord" type="button" value="Submit"> 
@@ -25,8 +26,12 @@
     </div>
     <div class="reset" id="reset">
         <input class="hide-me" id="resetBtn" type="button" value="Play Again?">
-    </div>   
+    </div>  
+    
+    <div class="alphabet" id="alphabet">
 
+    </div>
+</center>
     <script src="node_modules/rword/words/big.json"></script>
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/game.js"></script>
