added hangman guy

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <input class="button" id="submitWord" type="button" value="Submit"> 
      <h3 class="h3" id="h3">OR</h3>
     <input class="button" id="randomWord" type="button" value="Pick a Random Word"><br/>
-    <input class="hide-me" id="guessBox" type="text" placeholder="Guess a letter!">
-    <input class="hide-me" id="guessBtn" type="button" value="Guess!"></br>
+    <input class="button hide-me" id="guessBox" type="text" placeholder="Guess a letter!">
+    <input class="button hide-me" id="guessBtn" type="button" value="Guess!"></br>
 
     <div class="gameArea" id="gameArea">
 
+    </div>
+
+    <div class='gallows'>
+        <img src="img/hangman-0.png" id="hangimg"/>
     </div>
 
     <div class="gameMessage" id="gameMessage">
